--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         text-align: center;
         margin-top: 20px;
         font-size: 24px;
-        color: #003580;
+        color: #FF3131;
       }
     </style>
   </head>
   <body>
-    <h1>Math Solver</h1>
+    <h1>Custom Roblox Tools 🌙</h1>
     <img id="math-image" src="" alt="Math Equation">
     <div id="math-equation"></div>
 <script>
