--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Math Solver</title>
     <style>
       body {
-        background-color: #f7f7f7;
+        background-color: #000000;
         font-family: Arial, sans-serif;
         font-size: 16px;
       }
