--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <h1>Custom Roblox Tools 🌙</h1>
-    <img id="math-image" src="" alt="Loading...">
+    <img id="Loading..." src="" alt="Loading...">
     <div id="math-equation"></div>
 <script>
       var imageCounter = 1;
